@@ -1,4 +1,4 @@
-# Generated by /home/texlive/karl/Master/bin/i386-linux/tlmgr on Mon Dec  7 03:15:59 2015
+# Generated by /home/texlive/karl/Master/bin/i386-linux/tlmgr on Thu Apr  7 00:50:35 2016
 # Originally written by Thomas Esser, 1998. Public domain.
 #
 # As of TeX Live 2015, fmtutil reads *all* fmtutil.cnf files found.
@@ -77,10 +77,8 @@ lualatex luatex language.dat,language.dat.lua lualatex.ini
 #
 # from lollipop:
 lollipop pdftex - -translate-file=cp227.tcx *lollipop.ini
-lualollipop luatex - lualollipop.ini
 xelollipop xetex - -etex xelollipop.ini
 #! dvilollipop pdftex - -translate-file=cp227.tcx *lollipop.ini
-#! dvilualollipop luatex - -translate-file=cp227.tcx lualollipop.ini
 #
 # from luatex:
 luatex luatex language.def,language.dat.lua luatex.ini
